# sitter

./: CMakeLists.txt  README.md  TODO.md  mk
cmake/: CMakeLists.txt  SitterConfig.cmake
conf/: CMakeLists.txt  backup.gitignore  sitter.conf  sitter.ini  sitter.service
conf/log-definitions/: README.md  sitter-secure.conf  sitter.conf
conf/logger/: README.md
daemon/: CMakeLists.txt  sitter.cpp  sitterd.cpp
debian/: changelog  control  copyright  sitter-backup-etc.cron.weekly  sitter-backup-etc.install  sitter-backup-etc.postinst  sitter-backup-etc.postrm  sitter-dev.install  sitter-doc.install  sitter.cron.daily  sitter.default  sitter.install  sitter.logrotate  sitter.postinst  sitter.postrm  sitter.service  sitter.sysuser  sitter.tmpfiles
doc/: CMakeLists.txt  find-process.1  sitter-doc.css  sitter.8  sitter.doxy.in
plugins/: CMakeLists.txt
plugins/sitter_apt/: CMakeLists.txt  apt.cpp  apt.h
plugins/sitter_certificate/: CMakeLists.txt  certificate.cpp  certificate.h
plugins/sitter_cpu/: CMakeLists.txt  cpu.cpp  cpu.h
plugins/sitter_disk/: CMakeLists.txt  disk.cpp  disk.h  names.an  sitter-disk.ini
plugins/sitter_firewall/: CMakeLists.txt  firewall.cpp  firewall.h
plugins/sitter_flags/: CMakeLists.txt  flags.cpp  flags.h
plugins/sitter_log/: CMakeLists.txt  definition.cpp  definition.h  log.cpp  log.h  search.cpp  search.h
plugins/sitter_memory/: CMakeLists.txt  memory.cpp  memory.h
plugins/sitter_network/: .network.h.swp  CMakeLists.txt  network.cpp  network.h
plugins/sitter_packages/: CMakeLists.txt  names.an  packages.cpp  packages.h  sitter-packages.ini
plugins/sitter_processes/: CMakeLists.txt  names.an  processes.cpp  processes.h  sitter-processes.ini
plugins/sitter_reboot/: CMakeLists.txt  reboot.cpp  reboot.h
plugins/sitter_scripts/: CMakeLists.txt  README.md  names.an  scripts.cpp  scripts.h  sitter-script-starter  sitter-scripts.ini
sitter/: CMakeLists.txt  exception.h  flags.cpp  flags.h  interrupt.cpp  interrupt.h  meminfo.cpp  meminfo.h  messenger.cpp  messenger.h  names.an  sitter.cpp  sitter.h  sitter_worker.cpp  sitter_worker.h  sys_stats.cpp  sys_stats.h  tick_timer.cpp  tick_timer.h  version.cpp  version.h.in  worker_done.cpp  worker_done.h
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  catch_version.cpp
tmp/: log_definitions.cpp  log_definitions.h
tools/: CMakeLists.txt  find_process.cpp
